# liminal

./: Cargo.toml  README.md
src/: classify.rs  lib.rs  plane.rs
src/geometry/: plane.rs
src/predicates/: aabb.rs  distance.rs  segment.rs  triangle.rs
