[package]
name = "hyperlimit"
version = "0.3.0"
edition = "2024"
description = "Hyperreal-backed exact predicates with structural Real awareness."
license = "MIT OR Apache-2.0"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
repository = "https://github.com/timschmidt/hyperlimit"
readme = "README.md"
keywords = ["exact", "geometric", "predicates", "boundary", "orientation"]
categories = ["mathematics", "games", "simulation"]

[dependencies]
# Hyper ecosystem dependencies: keep the crate-official release references and
# the commented workspace references below. Switch to the workspace form for
# local development, then switch back to crates.io versions before publishing.
hyperreal = { version = "0.12.0" }
# hyperreal = { path = "../hyperreal" }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.7.0"
serde_json = "1"

[features]
default = ["std"]
std = []
dispatch-trace = ["hyperreal/dispatch-trace"]
parallel = ["std", "dep:rayon"]

[[bench]]
name = "predicates"
harness = false
